--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>WithMaxime</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>test</h1>
+<h1 class="test">test</h1>
 
 </body>
 </html>
