--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>WithMaxime</title>
@@ -7,7 +7,15 @@
 </head>
 <body>
 
-<h1 class="test">test</h1>
+<header>
+    <h1 align="center" class="headerTitle">WithMaxime</h1>
+</header>
+<main>
+
+</main>
+<footer>
+
+</footer>
 
 </body>
 </html>
