--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<header>
-    <h1 align="center" class="headerTitle">WithMaxime</h1>
-</header>
+<div>
+    <header>
+        <h1 class="headerTitle">WithMaxime</h1>
+    </header>
+</div>
+<nav>
+    <h1>test</h1>
+</nav>
 <main>
-
+    <a href="rechercheAvancee.html">test</a>
 </main>
 <footer>
 
 </footer>
-
 </body>
 </html>
