--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>WithMaxime</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/ca4539a050.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div>
@@ -12,7 +13,9 @@
     </header>
 </div>
 <nav>
-    <h1>test</h1>
+    <button class="nav_btn" onclick="window.location.href='index.html'"><i class="fa-solid fa-house"></i> Acceuil</button>
+    <button class="nav_btn"><i class="fa-solid fa-file-pen"></i> Cours</button>
+    <button class="nav_btn"><i class="fa-solid fa-download"></i> Téléchargement</button>
 </nav>
 <main>
     <a href="rechercheAvancee.html">test</a>
