--- a/index.html
+++ b/index.html
@@ -7,21 +7,28 @@
     <script src="https://kit.fontawesome.com/ca4539a050.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div>
+<div class="header">
     <header>
+        <img class="logo" src="images/logo.png">
         <h1 class="headerTitle">WithMaxime</h1>
     </header>
 </div>
-<nav>
-    <button class="nav_btn" onclick="window.location.href='index.html'"><i class="fa-solid fa-house"></i> Acceuil</button>
-    <button class="nav_btn"><i class="fa-solid fa-file-pen"></i> Cours</button>
-    <button class="nav_btn"><i class="fa-solid fa-download"></i> Téléchargement</button>
-</nav>
-<main>
-    <a href="rechercheAvancee.html">test</a>
-</main>
-<footer>
+<div class="nav">
+    <nav>
+        <button class="nav_btn" onclick="window.location.href='index.html'"><i class="fa-solid fa-house"></i> Acceuil</button>
+        <button class="nav_btn"><i class="fa-solid fa-file-pen"></i> Cours</button>
+        <button class="nav_btn"><i class="fa-solid fa-download"></i> Téléchargement</button>
+    </nav>
+</div>
+<div class="main">
+    <main>
 
-</footer>
+    </main>
+</div>
+<div class="footer">
+    <footer>
+        test
+    </footer>
+</div>
 </body>
 </html>
